# py-openai-assistants-api-demo

./: README.md
openai_assistants_api_demo/: list_message.py  list_runs.py  main.py  pyproject.toml  send_message.py
openai_assistants_api_demo/service/: thread_run_service.py
